--- a/src/reddit.css
+++ b/src/reddit.css
@@ -10,14 +10,25 @@ html, body {
   /*background-color: green;*/
 }
 
+.sublinks h1 {
+  margin-top: 10px;
+
+}
+
 .sublinks a, .sublinks a:active, .sublinks a:visited, .sublinks a:hover {
   color: white;
-  border-bottom: 1px white;
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
   background-color: #555;
+  margin-bottom: -1px;
   /*margin-bottom: 10px;*/
   border-radius: 0px;
   width: 100%;
   text-align: left;
+}
+
+.sublinks a:first {
+
 }
 
 .sublinks a:hover {
