--- a/src/reddit.css
+++ b/src/reddit.css
@@ -42,9 +42,12 @@ html, body {
 }
 
 .story-header {
-  padding-bottom: 10px;
   font-size: 18px;
   padding-top: 0;
+}
+
+.story-subheader {
+  padding-bottom: 10px;
 }
 
 .story-link {
